--- a/NFine.Web/Views/Login/Index.cshtml
+++ b/NFine.Web/Views/Login/Index.cshtml
@@ -30,11 +30,11 @@
             </div>
             <form class="form">
                 <div class="row">
-                    <input id="txt_account" type="text" placeholder="用户名/手机号/邮箱">
+                    <input id="txt_account" type="text" placeholder="用户名/手机号/邮箱" value="admin"/>
                     <i class="fa fa-user"></i>
                 </div>
                 <div class="row">
-                    <input id="txt_password" type="password" placeholder="登录密码">
+                    <input id="txt_password" type="password" placeholder="登录密码" value="000000"/>
                     <i class="fa fa-key"></i>
                 </div>
                 <div class="row">
@@ -66,7 +66,7 @@
         </ul>
     </div>
     <div class="copyright">
-        <a href="http://www.6mi.me" style="text-decoration:none;color:#fff;">出品</a>
+        <a href="http://www.baidu.com" style="text-decoration:none;color:#fff;">朱哥出品，必属精品</a>
         <br>
         适用浏览器：IE8以上、360、FireFox、Chrome、Safari、Opera、傲游、搜狗、世界之窗.
     </div>
